# cargo-wasix

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  action.yml  build.rs
.github/workflows/: ci.yml  release.yml
crates/assemble/: Cargo.toml
crates/cargo-wasix-shim/: Cargo.toml  build.rs
crates/cargo-wasix-shim/src/: main.rs
crates/cargo-wasix-shim/tests/: test.rs
doc/: SUMMARY.md  book.toml  cli-usage.md  config.md  hello-world.md  index.md  install.md  releasing.md  steps.md  testing.md  uninstalling.md  updating.md  wasm-bindgen.md  wasm-opt.md
examples/hello-world/: Cargo.toml
examples/markdown/: Cargo.toml
examples/markdown/src/: lib.rs
incompatible_crates/: README.md  data.json
src/: args.rs  cache.rs  config.rs  dependencies.rs  internal.rs  lib.rs  main.rs  registry.rs  runtime.rs  tool_path.rs  toolchain.rs  utils.rs
src/txt/: help.txt  install-wasix.sh
tests/tests/: main.rs  support.rs
