[package]
name = "cargo-wasix"
version = "0.1.6"
authors = ["Alex Crichton <alex@alexcrichton.com>", "John Sharratt <johnathan.sharratt@gmail.com"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/john-sharratt/cargo-wasix"
readme = "README.md"
description = """
Subcommand for Cargo to easily build code for `wasm64-wasi`
"""
exclude = ['cargo-wasix-*']

[[bin]]
name = "cargo-wasix"
path = "src/main.rs"
[lib]
name = "cargo_wasix"

[workspace]
members = [
  'crates/assemble',
  'crates/cargo-wasix-shim',
  'examples/markdown',
  'examples/hello-world',
]
exclude = ['tmp', 'target']

[dependencies]
anyhow = "1.0"
atty = "0.2"
dirs = "3.0.1"
flate2 = "1"
fs2 = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rustc-demangle = "0.1.16"
same-file = "1.0"
semver = "0.11"
serde = { version = "1", features = ['derive'] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
termcolor = "1.0.5"
toml = "0.5"
walrus = "0.19"
which = "4.0"

[dev-dependencies]
assert_cmd = "1.0.0"
predicates = "1.0.1"
wasmparser = "0.78"
