[package]
name = "cargo-wasix"
version = "0.1.24"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/wasix-org/cargo-wasix"
readme = "README.md"
description = """
Subcommand for Cargo to easily build code for `wasm32-wasmer-wasi` and `wasm64-wasmer-wasi` targets; aka. WASIX targets.
"""
exclude = ["cargo-wasix-*"]

[[bin]]
name = "cargo-wasix"
path = "src/main.rs"
[lib]
name = "cargo_wasix"

[workspace]
members = ['examples/markdown', 'examples/hello-world']
exclude = ['tmp', 'target', "cargo-wasix-*"]


[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
atty = "0.2"
cargo_metadata = "0.15"
dirs = "3.0.1"
flate2 = "1"
fs2 = "0.4"
fs_extra = "1.2.0"
reqwest = { version = "0.11", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
  "gzip",
] }
rustc-demangle = "0.1.16"
same-file = "1.0"
semver = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
termcolor = "1.0.5"
toml = "0.5"
walrus = "0.19"
which = "4.0"

[dev-dependencies]
assert_cmd = "1.0.0"
predicates = "1.0.1"
wasmparser = "0.78"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.2.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "aarch64-apple-darwin",
]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
